--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4            NaN        19.86  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "Name: Salary or Hourly, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "Name: Department, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,40 +329,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.4297815555301624e-36"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Your code here:\n",
-    "from scipy.stats import sem, t\n",
-    "from scipy import mean\n",
-    "\n",
-    "\n",
-    "\n",
-    "hourly=salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"]\n",
-    "hourly\n",
-    "\n",
-    "rv=t(df=95)\n",
-    "mu_0=hourly[\"Hourly Rate\"].mean()\n",
-    "mu_1=30\n",
-    "s=hourly[\"Hourly Rate\"].std()\n",
-    "n=len(hourly[\"Hourly Rate\"]) \n",
-    "t_test= (mu_1-mu_0)/(s/np.sqrt(n))\n",
-    "p_value=rv.pdf(t_test)\n",
-    "p_value\n",
-    "#Rechazamos H0\n",
-    "#Aceptamos H1: the hourly wage of all hourly workers is significantly different from $30/hr"
+    "from scipy.stats import ttest_lsamp\n",
+    "hourly=np.array(salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"][\"Hourly Rate\"])\n",
+    "ttest_lsamp(hourly,30).pvalue\n",
+    "#como 0.05 > pvalue: rechazo H0"
    ]
   },
   {
@@ -376,36 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0041037088875242435"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "salary=salaries[salaries[\"Salary or Hourly\"]==\"Salary\"]\n",
-    "salary_police=salary[salary[\"Department\"]==\"POLICE\"]\n",
-    "salary_police.head()\n",
-    "\n",
-    "rv=t(df=95)\n",
-    "mu_0=salary_police[\"Annual Salary\"].mean()\n",
-    "mu_1=86000\n",
-    "s=salary_police[\"Annual Salary\"].std()\n",
-    "\n",
-    "n=len(salary_police[\"Annual Salary\"]) \n",
-    "t_test= (mu_1-mu_0)/(s/np.sqrt(n))\n",
-    "p_value=rv.pdf(t_test)\n",
-    "p_value\n",
-    "#Como p_value<0.05 rechazamos H0"
+    "department_police=np.array(salaries[salaries[\"Department \"]==\"POLICE\"][\"Annual Salary\"])\n",
+    "ttest_lsamp(police_dep,86000).pvalue/2\n",
+    "#como 0.05 > pvalue: rechazo H0"
    ]
   },
   {
@@ -417,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -452,232 +411,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ADMIN HEARNG</th>\n",
-       "      <td>0</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ANIMAL CONTRL</th>\n",
-       "      <td>19</td>\n",
-       "      <td>62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AVIATION</th>\n",
-       "      <td>1082</td>\n",
-       "      <td>547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BOARD OF ELECTION</th>\n",
-       "      <td>0</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BOARD OF ETHICS</th>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BUDGET &amp; MGMT</th>\n",
-       "      <td>2</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BUILDINGS</th>\n",
-       "      <td>0</td>\n",
-       "      <td>269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BUSINESS AFFAIRS</th>\n",
-       "      <td>7</td>\n",
-       "      <td>164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CITY CLERK</th>\n",
-       "      <td>0</td>\n",
-       "      <td>84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CITY COUNCIL</th>\n",
-       "      <td>64</td>\n",
-       "      <td>347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COMMUNITY DEVELOPMENT</th>\n",
-       "      <td>4</td>\n",
-       "      <td>203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>COPA</th>\n",
-       "      <td>0</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CULTURAL AFFAIRS</th>\n",
-       "      <td>7</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DISABILITIES</th>\n",
-       "      <td>0</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DoIT</th>\n",
-       "      <td>0</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FAMILY &amp; SUPPORT</th>\n",
-       "      <td>287</td>\n",
-       "      <td>328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FINANCE</th>\n",
-       "      <td>44</td>\n",
-       "      <td>516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FIRE</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4639</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GENERAL SERVICES</th>\n",
-       "      <td>765</td>\n",
-       "      <td>215</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HEALTH</th>\n",
-       "      <td>3</td>\n",
-       "      <td>485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HUMAN RELATIONS</th>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HUMAN RESOURCES</th>\n",
-       "      <td>4</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>INSPECTOR GEN</th>\n",
-       "      <td>0</td>\n",
-       "      <td>87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LAW</th>\n",
-       "      <td>40</td>\n",
-       "      <td>367</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LICENSE APPL COMM</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MAYOR'S OFFICE</th>\n",
-       "      <td>8</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OEMC</th>\n",
-       "      <td>1273</td>\n",
-       "      <td>829</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>POLICE</th>\n",
-       "      <td>10</td>\n",
-       "      <td>13404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>POLICE BOARD</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PROCUREMENT</th>\n",
-       "      <td>2</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PUBLIC LIBRARY</th>\n",
-       "      <td>299</td>\n",
-       "      <td>716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>STREETS &amp; SAN</th>\n",
        "      <td>1862</td>\n",
        "      <td>336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TRANSPORTN</th>\n",
-       "      <td>725</td>\n",
-       "      <td>415</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TREASURER</th>\n",
-       "      <td>0</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WATER MGMNT</th>\n",
-       "      <td>1513</td>\n",
-       "      <td>366</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Salary or Hourly       Hourly  Salary\n",
-       "Department                           \n",
-       "ADMIN HEARNG                0      39\n",
-       "ANIMAL CONTRL              19      62\n",
-       "AVIATION                 1082     547\n",
-       "BOARD OF ELECTION           0     107\n",
-       "BOARD OF ETHICS             0       8\n",
-       "BUDGET & MGMT               2      44\n",
-       "BUILDINGS                   0     269\n",
-       "BUSINESS AFFAIRS            7     164\n",
-       "CITY CLERK                  0      84\n",
-       "CITY COUNCIL               64     347\n",
-       "COMMUNITY DEVELOPMENT       4     203\n",
-       "COPA                        0     116\n",
-       "CULTURAL AFFAIRS            7      58\n",
-       "DISABILITIES                0      28\n",
-       "DoIT                        0      99\n",
-       "FAMILY & SUPPORT          287     328\n",
-       "FINANCE                    44     516\n",
-       "FIRE                        2    4639\n",
-       "GENERAL SERVICES          765     215\n",
-       "HEALTH                      3     485\n",
-       "HUMAN RELATIONS             0      16\n",
-       "HUMAN RESOURCES             4      75\n",
-       "INSPECTOR GEN               0      87\n",
-       "LAW                        40     367\n",
-       "LICENSE APPL COMM           0       1\n",
-       "MAYOR'S OFFICE              8      77\n",
-       "OEMC                     1273     829\n",
-       "POLICE                     10   13404\n",
-       "POLICE BOARD                0       2\n",
-       "PROCUREMENT                 2      90\n",
-       "PUBLIC LIBRARY            299     716\n",
-       "STREETS & SAN            1862     336\n",
-       "TRANSPORTN                725     415\n",
-       "TREASURER                   0      22\n",
-       "WATER MGMNT              1513     366"
+       "Salary or Hourly  Hourly  Salary\n",
+       "Department                      \n",
+       "STREETS & SAN       1862     336"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here:\n",
-    "pd.crosstab(index=salaries['Department'], columns=salaries['Salary or Hourly'])"
+    "table=pd.crosstab(index=salaries['Department'], columns=salaries['Salary or Hourly'])\n",
+    "table[table[\"Hourly\"]==table[\"Hourly\"].max()]"
    ]
   },
   {
@@ -689,43 +445,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nan\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "nan"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Your code here:\n",
-    "# Streets & San\n",
-    "hourly=salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"]\n",
-    "hourly_streets=hourly[hourly[\"Department\"]==\"Streets & San\"]\n",
-    "hourly_streets.head()\n",
-    "rv=t(df=95)\n",
-    "mu_0=hourly_streets[\"Hourly Rate\"].mean()\n",
-    "print(mu_0)\n",
-    "mu_1=35\n",
-    "s=hourly_streets[\"Hourly Rate\"].std()\n",
-    "n=len(hourly_streets[\"Hourly Rate\"]) \n",
-    "t_test= (mu_1-mu_0)/(s/np.sqrt(n))\n",
-    "p_value=rv.pdf(t_test)\n",
-    "p_value"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
