lab-hypothesis-testing

--- a/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,11 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.stats import ttest_ind, ttest_rel\n",
+    "from scipy.stats import ttest_ind, ttest_rel, ttest_1samp\n",
     "\n",
     "def t_test_features(s1, s2, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
     "    \"\"\"Test means of a feature set of two samples\n",
@@ -225,7 +225,7 @@
     "    results = {}\n",
     "     \n",
     "    for f in features:\n",
-    "        results[f]= ttest_ind(s1[f],s2[f]).pvalue\n",
+    "        results[f]= ttest_ind(s1[f],s2[f], equal_var = False).pvalue\n",
     "    \n",
     "    return results\n",
     "\n",
@@ -253,22 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'HP': 3.330647684846191e-15,\n",
-       " 'Attack': 7.827253003205333e-24,\n",
-       " 'Defense': 1.5842226094427255e-12,\n",
-       " 'Sp. Atk': 6.314915770427266e-41,\n",
-       " 'Sp. Def': 1.8439809580409333e-26,\n",
-       " 'Speed': 2.3540754436897763e-21,\n",
-       " 'Total': 3.0952457469652825e-52}"
+       "{'HP': 1.0026911708035284e-13,\n",
+       " 'Attack': 2.520372449236646e-16,\n",
+       " 'Defense': 4.8269984949193316e-11,\n",
+       " 'Sp. Atk': 1.5514614112239812e-21,\n",
+       " 'Sp. Def': 2.2949327864052826e-15,\n",
+       " 'Speed': 1.049016311882451e-18,\n",
+       " 'Total': 9.357954335957446e-47}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "t_test_features(pokemon[pokemon[\"Legendary\"]==False],pokemon[pokemon[\"Legendary\"]==True])"
+    "t_test_features(pokemon[pokemon[\"Legendary\"]==True],pokemon[pokemon[\"Legendary\"]==False])"
    ]
   },
   {
@@ -304,22 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'HP': 0.13791881412813622,\n",
-       " 'Attack': 0.24050968418101457,\n",
-       " 'Defense': 0.5407630349194362,\n",
-       " 'Sp. Atk': 0.141197881763315,\n",
-       " 'Sp. Def': 0.16781226231606386,\n",
-       " 'Speed': 0.0028356954812578704,\n",
-       " 'Total': 0.559914064901444}"
+       "{'HP': 0.14551697834219623,\n",
+       " 'Attack': 0.24721958967217725,\n",
+       " 'Defense': 0.5677711011725426,\n",
+       " 'Sp. Atk': 0.12332165977104394,\n",
+       " 'Sp. Def': 0.18829872292645752,\n",
+       " 'Speed': 0.00239265937312135,\n",
+       " 'Total': 0.5631377907941676}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,22 +356,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'HP': 0.11060643144431853,\n",
-       " 'Attack': 0.00015741395666164396,\n",
-       " 'Defense': 3.250594205757004e-08,\n",
-       " 'Sp. Atk': 0.0001454917404035147,\n",
-       " 'Sp. Def': 0.00010893304795534396,\n",
-       " 'Speed': 0.024051410794037463,\n",
-       " 'Total': 1.1749035008828668e-07}"
+       "{'HP': 0.11314389855379421,\n",
+       " 'Attack': 0.00014932578145948305,\n",
+       " 'Defense': 2.7978540411514693e-08,\n",
+       " 'Sp. Atk': 0.00013876216585667842,\n",
+       " 'Sp. Def': 0.00010730610934512779,\n",
+       " 'Speed': 0.02421703281819094,\n",
+       " 'Total': 1.1157056505229961e-07}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
