Corregido ttest_ind incluyendo parámetro equal_var=False)

--- a/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
     "\n",
     "    # Your code here\n",
     "    for i in features:\n",
-    "        results[i]= ttest_ind(s1[i],s2[i]).pvalue/2\n",
+    "        results[i]= ttest_ind(s1[i],s2[i],equal_var=False).pvalue\n",
     "    return results\n"
    ]
   },
@@ -252,22 +252,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'HP': 1.6653238424230954e-15,\n",
-       " 'Attack': 3.913626501602666e-24,\n",
-       " 'Defense': 7.921113047213627e-13,\n",
-       " 'Sp. Atk': 3.157457885213633e-41,\n",
-       " 'Sp. Def': 9.219904790204666e-27,\n",
-       " 'Speed': 1.1770377218448882e-21,\n",
-       " 'Total': 1.5476228734826412e-52}"
+       "{'HP': 1.0026911708035284e-13,\n",
+       " 'Attack': 2.520372449236646e-16,\n",
+       " 'Defense': 4.8269984949193316e-11,\n",
+       " 'Sp. Atk': 1.5514614112239812e-21,\n",
+       " 'Sp. Def': 2.2949327864052826e-15,\n",
+       " 'Speed': 1.049016311882451e-18,\n",
+       " 'Total': 9.357954335957446e-47}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,22 +303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'HP': 0.06895940706406811,\n",
-       " 'Attack': 0.12025484209050728,\n",
-       " 'Defense': 0.2703815174597181,\n",
-       " 'Sp. Atk': 0.0705989408816575,\n",
-       " 'Sp. Def': 0.08390613115803193,\n",
-       " 'Speed': 0.0014178477406289352,\n",
-       " 'Total': 0.279957032450722}"
+       "{'HP': 0.14551697834219623,\n",
+       " 'Attack': 0.24721958967217725,\n",
+       " 'Defense': 0.5677711011725426,\n",
+       " 'Sp. Atk': 0.12332165977104394,\n",
+       " 'Sp. Def': 0.18829872292645752,\n",
+       " 'Speed': 0.00239265937312135,\n",
+       " 'Total': 0.5631377907941676}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,13 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your comment here\n",
     "# Se rechazaría la hipótesis nula en la velocidad, campo en el que son diferentes los pokemon de primera\n",
-    "# y segunda generación. El Sp. Atk y Sp. Def se rechazarían pero no con un nivel de confianza tan alto."
+    "# y segunda generación. El Sp. Atk y Sp. Def se rechazarían pero no con un nivel de confianza tan alto.\n",
+    "# Cabe indicar que se hay que dividir entre dos el p-valor del resultado, puesto que viene el valor del two-tailed."
    ]
   },
   {
@@ -355,22 +356,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'HP': 0.055303215722159266,\n",
-       " 'Attack': 7.870697833082198e-05,\n",
-       " 'Defense': 1.625297102878502e-08,\n",
-       " 'Sp. Atk': 7.274587020175735e-05,\n",
-       " 'Sp. Def': 5.446652397767198e-05,\n",
-       " 'Speed': 0.012025705397018732,\n",
-       " 'Total': 5.874517504414334e-08}"
+       "{'HP': 0.11314389855379421,\n",
+       " 'Attack': 0.00014932578145948305,\n",
+       " 'Defense': 2.7978540411514693e-08,\n",
+       " 'Sp. Atk': 0.00013876216585667842,\n",
+       " 'Sp. Def': 0.00010730610934512779,\n",
+       " 'Speed': 0.02421703281819094,\n",
+       " 'Total': 1.1157056505229961e-07}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,6 +463,13 @@
     "# En el caso de vel ataque vs vel defensa, al contrario que la anterior, no se rechaza la hipótesis nula\n",
     "# al ser un p-valor de 0.19"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
