--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
-    "\n"
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
