--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -665,14 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The confidence interval of the hourly wage is 32.52 - 33.05 and the mean is 32.79\n"
+      "The confidence interval of the hourly wage is 32.523 - 33.054 and the mean is 32.789\n"
      ]
     }
    ],
@@ -684,9 +684,9 @@
     "\n",
     "result = mean_confidence_interval(hourly_wage, confidence=0.95)\n",
     "\n",
-    "print(\"The confidence interval of the hourly wage is {} - {} and the mean is {}\".format(round(result[1],2),\n",
-    "                                                                                        round(result[2],2),\n",
-    "                                                                                        round(result[0],2)))"
+    "print(\"The confidence interval of the hourly wage is {} - {} and the mean is {}\".format(round(result[1],3),\n",
+    "                                                                                        round(result[2],3),\n",
+    "                                                                                        round(result[0],3)))"
    ]
   },
   {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "Name: Annual Salary, dtype: float64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "13403"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "86486.41450313339"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "157.82445675052244"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,14 +787,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The confidence interval of the salaried employeed in the police is 86177.06 - 86795.77 and the mean is 86486.41\n"
+      "The confidence interval of the salaried employeed in the police is 86177.056 - 86795.773 and the mean is 86486.415\n"
      ]
     }
    ],
@@ -807,9 +807,9 @@
     "result_sp = mean_confidence_interval(salaried_police, confidence=0.95)\n",
     "\n",
     "print(\"The confidence interval of the salaried employeed in the police is {} - {} and the mean is {}\".\n",
-    "format(round(result_sp[1],2),\n",
-    "round(result_sp[2],2),\n",
-    "round(result_sp[0],2)))"
+    "format(round(result_sp[1],3),\n",
+    "round(result_sp[2],3),\n",
+    "round(result_sp[0],3)))"
    ]
   },
   {
@@ -827,12 +827,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.65451082429264 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "\n",
+    "stat, pval = proportions_ztest(salaries['Salary or Hourly'].value_counts(), len(salaries['Salary or Hourly']), value=0.25)\n",
+    "print(stat, pval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33183"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(salaries['Salary or Hourly'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salaries['Salary or Hourly'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
