Completado lab-hypothesis-testing

--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4            NaN        19.86  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "(33183, 8)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "Name: Salary or Hourly, dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "Name: Department, dtype: int64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -344,15 +344,15 @@
        "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scipy.stats import ttest_1samp, t\n",
+    "from scipy.stats import ttest_1samp, t, sem\n",
     "\n",
-    "stats.ttest_1samp(salaries['Hourly Rate'].dropna(axis=0), 30)\n",
+    "ttest_1samp(salaries['Hourly Rate'].dropna(axis=0), 30)\n",
     "\n",
     "# We reject the null hypothesis"
    ]
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -377,13 +377,13 @@
        "Ttest_1sampResult(statistic=3.081997005712994, pvalue=0.0020603403550965137)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.ttest_1samp(salaries[salaries['Department'] == 'POLICE']['Annual Salary'].dropna(axis=0), 86000)\n",
+    "ttest_1samp(salaries[salaries['Department'] == 'POLICE']['Annual Salary'].dropna(axis=0), 86000)\n",
     "\n",
     "# We reject the null hypothesis"
    ]
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "GENERAL SERVICES     765     215"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -497,13 +497,13 @@
        "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.ttest_1samp(salaries[salaries['Department'] == 'STREETS & SAN']['Hourly Rate'].dropna(axis=0), 35)\n",
+    "ttest_1samp(salaries[salaries['Department'] == 'STREETS & SAN']['Hourly Rate'].dropna(axis=0), 35)\n",
     "\n",
     "# We reject the null hypothesis"
    ]
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
        "18        17.68"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "8021"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "32.78855771628024"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -653,19 +653,19 @@
        "0.1352368565101596"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "standard_error = stats.sem(hourly_wage, axis=None)\n",
+    "standard_error = sem(hourly_wage, axis=None)\n",
     "standard_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "Name: Annual Salary, dtype: float64"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        "13403"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "86486.41450313339"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -775,26 +775,26 @@
        "157.82445675052244"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "standard_error_sp = stats.sem(salaried_police, axis=None)\n",
+    "standard_error_sp = sem(salaried_police, axis=None)\n",
     "standard_error_sp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The confidence interval of the salaried employeed in the police is 86177.06 - 86795.77 and the mean is 86486.41\n"
+      "The confidence interval of the salaried employeed in the police is 86177.056 - 86795.773 and the mean is 86486.415\n"
      ]
     }
    ],
@@ -827,51 +827,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from statsmodels.stats.proportion import proportions_ztest\n",
-    "\n"
+    "from statsmodels.stats.proportion import proportions_ztest\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'exito' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-6600c9ea92ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproportions_ztest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexito\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlength\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'exito' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.5099964213703005 0.0004481127249057967\n"
      ]
     }
    ],
    "source": [
-    "stat, pval = proportions_ztest(exito, length,0.25)\n",
-    "print(stat, pval)"
+    "stat, pval = proportions_ztest((salaries['Salary or Hourly'] == 'Hourly').sum(), salaries['Salary or Hourly'].size, 0.25)\n",
+    "print(stat, pval)\n",
+    "\n",
+    "# We reject the null hypothesis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
