--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -238,12 +238,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of the total points for Pokemon is 435.1025 and the standard deviation is 119.963\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from statistics import stdev\n",
+    "\n",
+    "mn = (pokemon['Total']).mean()\n",
+    "sd = round(stdev(pokemon['Total']),3)\n",
+    "\n",
+    "print('The mean of the total points for Pokemon is {} and the standard deviation is {}'.format(mn, sd))\n"
    ]
   },
   {
