--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "# import numpy and pandas\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -52,12 +52,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pokemon.head()"
    ]
   },
   {
@@ -69,12 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    735\n",
+       "True      65\n",
+       "Name: Legendary, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokemon[\"Legendary\"].value_counts()\n"
    ]
   },
   {
@@ -86,12 +242,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokemon_mean = pokemon[pokemon[\"Legendary\"]==True][\"Total\"].mean()\n",
+    "pokemon_mean2 = pokemon[pokemon[\"Legendary\"]==False][\"Total\"].mean()\n",
+    "pokemon_std = pokemon[pokemon[\"Legendary\"]==True][\"Total\"].std()\n",
+    "pokemon_std2 = pokemon[pokemon[\"Legendary\"]==False][\"Total\"].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(637.3846153846154, 417.21360544217686, 60.93738905315344, 106.76041745713005)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon_mean, pokemon_mean2, pokemon_std, pokemon_std2"
    ]
   },
   {
@@ -105,12 +284,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-25.8335743895517, pvalue=9.357954335957446e-47)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from scipy.stats import *\n",
+    "legendary=pokemon[pokemon[\"Legendary\"]==True][\"Total\"]\n",
+    "non_legendary=pokemon[pokemon[\"Legendary\"]==False][\"Total\"]\n",
+    "test=ttest_ind(non_legendary, legendary, equal_var=False)\n",
+    "test"
    ]
   },
   {
@@ -121,13 +315,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "### Your conclusions here:\n",
+    "#### The are significant differences between the means of the two samples.  So, if a Pokemon is or not legendary is something that matters for statistical purposes. \n"
    ]
   },
   {
@@ -139,12 +331,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Water       112\n",
+       "Normal       98\n",
+       "Grass        70\n",
+       "Bug          69\n",
+       "Psychic      57\n",
+       "Fire         52\n",
+       "Rock         44\n",
+       "Electric     44\n",
+       "Dragon       32\n",
+       "Ground       32\n",
+       "Ghost        32\n",
+       "Dark         31\n",
+       "Poison       28\n",
+       "Steel        27\n",
+       "Fighting     27\n",
+       "Ice          24\n",
+       "Fairy        17\n",
+       "Flying        4\n",
+       "Name: Type 1, dtype: int64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokemon[\"Type 1\"].value_counts()"
    ]
   },
   {
@@ -156,12 +377,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>#</th>\n",
+       "      <td>303.089286</td>\n",
+       "      <td>188.440807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>430.455357</td>\n",
+       "      <td>113.188266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HP</th>\n",
+       "      <td>72.062500</td>\n",
+       "      <td>27.487026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Attack</th>\n",
+       "      <td>74.151786</td>\n",
+       "      <td>28.377192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Defense</th>\n",
+       "      <td>72.946429</td>\n",
+       "      <td>27.773809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <td>74.812500</td>\n",
+       "      <td>29.030128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <td>70.517857</td>\n",
+       "      <td>28.460493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Speed</th>\n",
+       "      <td>65.964286</td>\n",
+       "      <td>23.019353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Generation</th>\n",
+       "      <td>2.857143</td>\n",
+       "      <td>1.558800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  mean         std\n",
+       "#           303.089286  188.440807\n",
+       "Total       430.455357  113.188266\n",
+       "HP           72.062500   27.487026\n",
+       "Attack       74.151786   28.377192\n",
+       "Defense      72.946429   27.773809\n",
+       "Sp. Atk      74.812500   29.030128\n",
+       "Sp. Def      70.517857   28.460493\n",
+       "Speed        65.964286   23.019353\n",
+       "Generation    2.857143    1.558800"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokemon_water = pokemon[pokemon[\"Type 1\"]==\"Water\"].describe().T[[\"mean\",\"std\"]]\n",
+    "pokemon_water"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>#</th>\n",
+       "      <td>372.536337</td>\n",
+       "      <td>209.928799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total</th>\n",
+       "      <td>435.859012</td>\n",
+       "      <td>121.091682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HP</th>\n",
+       "      <td>68.802326</td>\n",
+       "      <td>25.194299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Attack</th>\n",
+       "      <td>79.790698</td>\n",
+       "      <td>33.025152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Defense</th>\n",
+       "      <td>73.988372</td>\n",
+       "      <td>31.719933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <td>72.495640</td>\n",
+       "      <td>33.292537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <td>72.127907</td>\n",
+       "      <td>27.739292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Speed</th>\n",
+       "      <td>68.654070</td>\n",
+       "      <td>29.925907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Generation</th>\n",
+       "      <td>3.399709</td>\n",
+       "      <td>1.666119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  mean         std\n",
+       "#           372.536337  209.928799\n",
+       "Total       435.859012  121.091682\n",
+       "HP           68.802326   25.194299\n",
+       "Attack       79.790698   33.025152\n",
+       "Defense      73.988372   31.719933\n",
+       "Sp. Atk      72.495640   33.292537\n",
+       "Sp. Def      72.127907   27.739292\n",
+       "Speed        68.654070   29.925907\n",
+       "Generation    3.399709    1.666119"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon_others = pokemon[pokemon[\"Type 1\"]!=\"Water\"].describe().T[[\"mean\",\"std\"]]\n",
+    "pokemon_others"
    ]
   },
   {
@@ -173,12 +591,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.4638681676327303, pvalue=0.6433915385821449)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from scipy.stats import *\n",
+    "water=pokemon[pokemon[\"Type 1\"]==\"Water\"][\"Total\"]\n",
+    "non_water=pokemon[pokemon[\"Type 1\"]!=\"Water\"][\"Total\"]\n",
+    "test2=ttest_ind(water, non_water, equal_var=False)\n",
+    "test2"
    ]
   },
   {
@@ -189,13 +622,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your conclusions here:\n",
-    "\n"
+    "### Your conclusions here:\n",
+    "#### We cannot reject the null hypothesis as the pvalue is higher than 0.05."
    ]
   },
   {
